[package]
name = "mouseless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10"
evdev = { git = "https://github.com/ToxicMushroom/evdev", branch = "dev_props" }
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
